Fix text alignment on large screens in about section from top to center vertically

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -338,6 +338,12 @@ select option {
         margin: 10px;
     }
 
+    /* Create rule that centers text vertically */
+    .top-about {
+        display: flex;
+        align-items: center;
+    }
+
     .dive-center-image, .dive-boat-image {
         max-height: 250px;
         max-width: 500px;
